Update strings for 36

--- a/zh-TW/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/zh-TW/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,10 @@ quit-button.tooltiptext.linux2 = 離開 %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = 離開 %1$S (%2$S)
 
-loop-call-button2.label = 開始對話
-loop-call-button2.tooltiptext = 開始對話
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = 開始對話
 
 social-share-button.label = 分享此頁面
 social-share-button.tooltiptext = 分享此頁面
@@ -111,6 +113,7 @@ web-apps-button.tooltiptext = 探索應用程式
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = 開啟 WebIDE
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = 開啟 WebIDE (%S)
 
