--- a/zh-TW/browser/chrome/browser/devtools/gclicommands.properties
+++ b/zh-TW/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,10 @@ helpDesc=取得可用指令的說明
 # explain the contents of the command help table.
 helpAvailable=可用指令
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=多程序模式 (E10S) 中無法使用「%1$S」指令
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=可以控制主控台的指令
