--- a/zh-TW/browser/chrome/browser/devtools/toolbox.properties
+++ b/zh-TW/browser/chrome/browser/devtools/toolbox.properties
@@ -79,3 +79,8 @@ options.darkTheme.label=暗主題
 # Used as a label for light theme
 options.lightTheme.label=亮主題
 
+# LOCALIZATION NOTE (toolbox.noContentProcess.message)
+# Used as a message in the alert displayed when trying to open a browser
+# content toolbox and there is no content process running
+toolbox.noContentProcess.message=沒有執行中的內容程序。
+
