--- a/zh-TW/browser/chrome/browser/devtools/webide.properties
+++ b/zh-TW/browser/chrome/browser/devtools/webide.properties
@@ -20,7 +20,7 @@ importHostedApp_title=開啟架設的應用程式
 importHostedApp_header=輸入安裝資訊檔網址
 
 notification_showTroubleShooting_label=疑難排解
-notification_showTroubleShooting_accesskey=t
+notification_showTroubleShooting_accesskey=T
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
@@ -42,6 +42,8 @@ error_cantConnectToApp=無法連線至應用程式: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=無法取回附加元件清單: %S
 
+error_appProjectsLoadFailed=無法載入專案清單，可能是因為您在較新版本的 Firefox 中曾經使用過這個設定檔。
+
 addons_stable=穩定版
 addons_unstable=不穩定版
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
@@ -52,6 +54,7 @@ addons_simulator_label=Firefox OS %1$S Simulator (%2$S)
 addons_install_button=安裝
 addons_uninstall_button=移除
 addons_adb_label=ADB Helper 附加元件
+addons_adapters_label=工具轉接器附加元件
 addons_adb_warning=若缺少此附加元件將無法偵測到 USB 裝置
 addons_status_unknown=?
 addons_status_installed=已安裝
@@ -71,4 +74,7 @@ status_valid=有效
 status_warning=警告
 status_error=錯誤
 status_unknown=未知
+
+# Preferences
+devicepreferences_reset_default=還原為預設值
 
