--- a/zh-TW/dom/chrome/dom/dom.properties
+++ b/zh-TW/dom/chrome/dom/dom.properties
@@ -209,4 +209,5 @@ KeyNameZoomWarning=KeyboardEvent.key 的值「Zoom」已被棄用，將會被更
 KeyNameDeadKeysWarning=KeyboardEvent.key 當中由「Dead」開頭的值皆已被棄用，將會被合併為單一的「Dead」。若需更多資訊請參考 https://developer.mozilla.org/zh-TW/docs/Web/API/KeyboardEvent.key。
 ImportXULIntoContentWarning=匯入 XUL 節點至內容文件的用法已被棄用，此功能將會被移除。
 XMLDocumentLoadPrincipalMismatch=document.load 無法對來自其他視窗的文件使用。僅能於建立該文件的視窗當中對該文件呼叫 .load。請最好改用 XMLHttpRequest。
-
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=因為瀏覽網頁的行為，有一筆尚未完成的 IndexedDB 交易已被終止。
