--- a/zh-TW/dom/chrome/layout/css.properties
+++ b/zh-TW/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=彩度 (Saturation)
 PEColorLightnessEOF=亮度 (Lightness)
 PEColorOpacityEOF=色彩數值內的透明度 (opacity)。
 PEExpectedNumber=預期應有數字，卻出現「%1$S」。
+PEPositionEOF=<position>
+PEExpectedPosition=預期應有 <position> 卻出現「%1$S」。
+PEExpectedRadius=預期應有半徑，卻出現「%1$S」。
 PEExpectedCloseParen=預期應有「)」，卻出現「%1$S」。
 PEDeclEndEOF=「;」或「}」以結束宣告
 PEParseDeclarationNoColon=預期應有「:」，卻出現「%1$S」。
