--- a/zh-TW/mobile/android/chrome/browser.properties
+++ b/zh-TW/mobile/android/chrome/browser.properties
@@ -91,7 +91,6 @@ identity.identified.verified_by_you=您已將此網站加入例外清單
 identity.identified.state_and_country=%S, %S
 identity.identified.title_with_country=%S (%S)
 identity.encrypted2=已加密
-identity.ownerUnknown3=未知
 
 # Geolocation UI
 geolocation.allow=透露
@@ -392,5 +391,5 @@ feedHandler.subscribeWith=使用下列服務訂閱
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
-nativeWindow.deprecated=%S 已被棄用，請改用 %S
+nativeWindow.deprecated=%1$S 已被棄用，請改用 %2$S
 
