--- a/zh-TW/security/manager/chrome/pippki/pippki.properties
+++ b/zh-TW/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,14 @@ pageInfo_NoEncryption=連線未加密
 pageInfo_Privacy_None1=網站 %S 不支援您正在瀏覽的網頁的加密方式。
 pageInfo_Privacy_None2=未加密就送至網路的資訊可能會在傳輸途中被其它人看到。
 pageInfo_Privacy_None3=您正在檢視的頁面未加密。
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=連線已加密：高級加密（%1$S，%2$S bit 金鑰）
-pageInfo_Privacy_Strong1=您正在瀏覽的網頁在傳送前有經過加密。
-pageInfo_Privacy_Strong2=加密使得未經許可的人非常難以破解以取得電腦間的通訊。 所以幾乎不大有人可以截取到您在網路上傳送與接收的資訊。
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=連線已加密：初級加密（%1$S，%2$S bit 金鑰）
-pageInfo_Privacy_Weak1=網站 %S 使用低等級的加密來傳送您正在瀏覽的網頁。
-pageInfo_Privacy_Weak2=低等級的加密可能會讓一些未被允許的人看到這些資訊。
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=連線已加密（%1$S、%2$S 位元金鑰、%3$S）
+pageInfo_Privacy_Encrypted1=您正在瀏覽的網頁在傳送前有經過加密。
+pageInfo_Privacy_Encrypted2=加密功能會讓未授權的使用者很難偷聽兩台電腦間傳輸的資訊，所以此頁面在網路上傳輸時很難會有人看到內容。
 pageInfo_MixedContent=部份連線加密
-pageInfo_Privacy_Mixed1=您正瀏覽的頁面有一部份在網路上傳送時未加密。
+pageInfo_Privacy_Broken1=您在檢視的網頁在透過網際網路傳輸前有部分內容沒有加密，或加密強度不夠高。
 
 #Cert Viewer
 certDetails=憑證檢視器:
@@ -151,17 +147,17 @@ writeFileUnknownError=未知錯誤
 addExceptionBrandedWarning2=您正試圖覆蓋 %S 要如何識別此網站的設定。
 addExceptionInvalidHeader=此網站嘗試用無效的資訊識別自己。
 addExceptionDomainMismatchShort=錯誤的網站
-addExceptionDomainMismatchLong=憑證屬於不同的網站，該網站的身分可能已被盜用。
+addExceptionDomainMismatchLong2=憑證屬於不同網站，有可能是某人想要仿造此網站。
 addExceptionExpiredShort=過時的資訊
-addExceptionExpiredLong=憑證目前無效。無法確認此身分是被竊取或是遺失。
+addExceptionExpiredLong2=憑證已經失效，可能是被偷走或遺失，可能會被別人用於仿造此網站。
 addExceptionUnverifiedOrBadSignatureShort=未知身分
-addExceptionUnverifiedOrBadSignatureLong=由於未經公認的認證機構使用安全的簽章進行驗證，無法信任此憑證。
+addExceptionUnverifiedOrBadSignatureLong2=因為無法確認此憑證是由受信任的單位以安全的方式簽署，無法信任此憑證。
 addExceptionValidShort=有效憑證
 addExceptionValidLong=此網站提供有效且經過驗證的識別資訊，不需要加入例外清單。
 addExceptionCheckingShort=檢查資訊中
-addExceptionCheckingLong=試圖識別網站身分中…
+addExceptionCheckingLong2=正在識別此網站…
 addExceptionNoCertShort=無可用資訊
-addExceptionNoCertLong=無法獲得網站的身分識別狀態。
+addExceptionNoCertLong2=無法取得此網站的識別資訊。
 addExceptionConnectionFailed=連線失敗
 
 #Certificate Exists in database
