--- a/zh-TW/suite/chrome/common/notification.properties
+++ b/zh-TW/suite/chrome/common/notification.properties
@@ -16,14 +16,10 @@ carbonfailurepluginsMessage.button.label=重新啟動為 32 位元模式
 carbonfailurepluginsMessage.button.accesskey=R
 
 missingpluginsMessage.title=顯示此頁面全部的多媒體與資訊需要安裝其它的外掛程式。
-missingpluginsMessage.button.label=安裝缺少的外掛程式…
-missingpluginsMessage.button.accesskey=I
 
 blockedpluginsMessage.title=為了保護您的電腦，此頁面所需要的某些外掛程式已被封鎖。
 blockedpluginsMessage.infoButton.label=詳細資訊…
 blockedpluginsMessage.infoButton.accesskey=D
-blockedpluginsMessage.searchButton.label=更新外掛程式…
-blockedpluginsMessage.searchButton.accesskey=U
 
 crashedpluginsMessage.title=%S 外掛程式發生錯誤，已經關閉。
 crashedpluginsMessage.reloadButton.label=重新載入網頁
@@ -184,8 +180,10 @@ updatePromptCheckButton.accesskey=C
 SecurityTitle=安全性警告
 MixedContentMessage=您要檢視的文件有部份加密、部份未加密，您所看到或輸入的資料有可能被其它人竊聽。
 MixedActiveContentMessage=您要開啟的是一個包含了不安全資訊的加密頁面。其他人很容易就能讀取您在此頁面看到或輸入的東西。
+TrackingContentMessage=本網頁中的某些內容可能正在追蹤您的線上行為。
 MixedDisplayContentMessage=您開啟的頁面只有部分被加密，無法避免竊聽。
 BlockedActiveContentMessage=已封鎖此頁面中不安全的資訊。
+BlockedTrackingContentMessage=已封鎖本網頁中某些正在追蹤您的線上行為的內容。
 BlockedDisplayContentMessage=已封鎖此頁面中未加密的資訊。
 EnterInsecureMessage=您已離開加密頁面，接下來其他人將能很容易地讀取您所傳送或接收的資訊。
 EnterSecureMessage=您想瀏覽已加密的網頁，而且此網站的憑證資料也正確；所以您送出及接收的資料將極端不容易被第三者監聽到。
