--- a/zh-TW/toolkit/chrome/global/aboutSupport.properties
+++ b/zh-TW/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,7 @@ webglRenderer = WebGL Renderer
 minLibVersions = 預期應有的最小版本
 loadedLibVersions = 使用中的版本
 
+hasSeccompBPF = Seccomp-BPF（過濾系統呼叫）
+canSandboxContent = 內容處理沙盒
+canSandboxMedia = 媒體外掛程式沙盒
+
