--- a/zh-TW/toolkit/chrome/global/aboutTelemetry.properties
+++ b/zh-TW/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = 此頁面顯示 Telemetry 所收集到效能、硬體設定、使用程度、以及自訂選項的相關資訊。此資訊將會傳送到 %1$S 以幫助改善 %2$S。
 
+generalDataHeadingName = 名稱
+
+generalDataHeadingValue = 值
+
 slowSqlMain = 主要執行緒上的慢速 SQL 陳述式
 
 slowSqlOther = Helper 執行緒中的慢速 SQL 陳述句
