--- a/zh-TW/browser/chrome/browser/aboutPrivateBrowsing.properties
+++ b/zh-TW/browser/chrome/browser/aboutPrivateBrowsing.properties
@@ -2,5 +2,6 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-chooseFileDialogTitle=選擇檔案
+title=您正在隱私瀏覽模式當中
+title.normal=要開啟隱私視窗嗎？
 
