--- a/zh-TW/browser/chrome/browser/browser.properties
+++ b/zh-TW/browser/chrome/browser/browser.properties
@@ -295,7 +295,7 @@ identity.identified.verified_by_you=您已將此網站加入例外清單。
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=與此網站的連線是安全的。
-identity.mixed_display_loaded=因為頁面中包含了未加密的元素（例如圖片），與此網站的連線不完全安全。
+identity.broken_loaded=因為網站包含了未加密的元素（例如圖片），或加密等級不夠強，與此網站間的連線不完全安全。
 identity.mixed_active_loaded2=此網站包含了未加密的互動式內容（例如指令碼）。其他人可以檢視您的資訊或修改網站的行為。
 identity.unencrypted=您與此網站的連線並未加密。
 
