--- a/zh-TW/browser/chrome/browser/devtools/timeline.properties
+++ b/zh-TW/browser/chrome/browser/devtools/timeline.properties
@@ -38,5 +38,31 @@ timeline.records=紀錄
 timeline.label.styles=樣式
 timeline.label.reflow=重排
 timeline.label.paint=繪圖
+timeline.label.javascript=Javascript
 timeline.label.domevent=DOM 事件
+timeline.label.consoleTime=主控台
+
+# LOCALIZATION NOTE (graphs.memory):
+# This string is displayed in the memory graph of the Performance tool,
+# as the unit used to memory consumption. This label should be kept
+# AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.memory=MB
+
+# LOCALIZATION NOTE (timeline.markerDetailFormat):
+# Some timeline markers come with details, like a size, a name, a js function.
+# %1$S is replaced with one of the above label (timeline.label.*) and %2$S
+# with the details. For examples: Paint (200x100), or console.time (FOO)
+timeline.markerDetailFormat=%1$S (%2$S)
+
+# LOCALIZATION NOTE (time.markerDetail.*):
+# Strings used in the waterfall sidebar.
+timeline.markerDetail.start=開始:
+timeline.markerDetail.end=結束:
+timeline.markerDetail.duration=持續時間:
+timeline.markerDetail.consoleTimerName=計時器名稱:
+timeline.markerDetail.DOMEventType=事件類型:
+timeline.markerDetail.DOMEventPhase=階段:
+timeline.markerDetail.DOMEventTargetPhase=目標
+timeline.markerDetail.DOMEventCapturingPhase=捕捉
+timeline.markerDetail.DOMEventBubblingPhase=Bubbling
 
