--- a/zh-TW/browser/chrome/browser/search.properties
+++ b/zh-TW/browser/chrome/browser/search.properties
@@ -4,6 +4,15 @@
 
 searchtip=使用 %S 搜尋
 
+# LOCALIZATION NOTE (searchPlaceholder): this is shown in the searchbox when
+# the user hasn't typed anything yet.
+searchPlaceholder=搜尋
+
+# LOCALIZATION NOTE (searchHeader): this is displayed at the top of the panel
+# showing search suggestions.
+# %S is replaced with the name of the current default search engine.
+searchHeader=搜尋 %S
+
 # LOCALIZATION NOTE (cmd_pasteAndSearch): "Search" is a verb, this is the
 # search bar equivalent to the url bar's "Paste & Go"
 cmd_pasteAndSearch=貼上並搜尋
