--- a/zh-TW/browser/chrome/browser/shellservice.properties
+++ b/zh-TW/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = 不要再問我
 setDefaultBrowserNever.accesskey   = D
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=預設瀏覽器
+setDefaultBrowserMessage=%S 目前不是您的預設瀏覽器。要設定為預設瀏覽器嗎？
+setDefaultBrowserDontAsk=每次啟動 %S 時都重新檢查
 
 desktopBackgroundLeafNameWin=桌布.bmp
 DesktopBackgroundDownloading=正在儲存圖片…
