--- a/zh-TW/webapprt/webapprt/overrides/appstrings.properties
+++ b/zh-TW/webapprt/webapprt/overrides/appstrings.properties
@@ -30,7 +30,7 @@ externalProtocolChkMsg=對於此類鏈結一律使用並記住我的選擇
 externalProtocolLaunchBtn=執行程式
 malwareBlocked=%S 這個網站已被回報為有害網站，依據您所選擇的安全設定予以封鎖。
 phishingBlocked=這個在 %S 的網站已被回報是偽造網站，特別設計用來誘騙使用者透露其個人或財務資訊。
-cspFrameAncestorBlocked=此應用程式嘗試存取包含了內容安全政策的內容，以致於無法以這種方式被嵌入。
+cspBlocked=此應用程式嘗試存取包含了內容安全政策的資源，以致於無法以這種方式被載入。
 corruptedContentError=因為在資料傳輸過程當中偵測到錯誤，應用程式無法繼續載入。
 remoteXUL=此應用程式使用了已經不再可用的未支援技術。
 
