--- a/zh-TW/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/zh-TW/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -10,7 +10,7 @@ restartTitle=關閉 %S
 restartMessageNoUnlocker=%S 已在執行中，但無回應。請先結束現有的 %S 或重新開機再開啟新視窗。
 restartMessageUnlocker=%S 已在執行中，但無回應。請先結束現有的 %S 再開啟新視窗。
 restartMessageNoUnlockerMac=已經開啟 %S，同時只能開啟一個 %S。
-restartMessageUnlockerMac=已經開啟 %1$S。為了開啟新的 %2$S，將結束目前執行中的 %1$S。
+restartMessageUnlockerMac=%S 已經開啟。目前執行中的 %S 將結束以開啟新的。
 
 # Profile manager
 # LOCALIZATION NOTE (profileTooltip): First %S is the profile name, second %S is the path to the profile folder.
