[ca] update from Pootle (firefox)

--- a/ca/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ca/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,11 +97,9 @@ quit-button.tooltiptext.linux2 = Surt del %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Surt del %1$S (%2$S)
 
-loop-call-button2.label = Inicia una conversa
-loop-call-button2.tooltiptext = Inicia una conversa
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
 
-social-share-button.label = Comparteix aquesta pàgina
-social-share-button.tooltiptext = Comparteix aquesta pàgina
 
 panic-button.label = Forget
 panic-button.tooltiptext = Forget about some browsing history
@@ -111,5 +109,5 @@ web-apps-button.tooltiptext = Descobreix aplicacions
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Obre el WebIDE
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
