--- a/ca/browser/chrome/browser/shellservice.properties
+++ b/ca/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,9 @@ setDefaultBrowserNotNow.accesskey  = n
 setDefaultBrowserNever.label       = No m'ho tornis a demanar
 setDefaultBrowserNever.accesskey   = d
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
 
 desktopBackgroundLeafNameWin=Fons escriptori.bmp
 DesktopBackgroundDownloading=S'està desant la imatge…
