--- a/ca/toolkit/chrome/global/aboutTelemetry.properties
+++ b/ca/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,9 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Aquesta pàgina conté la informació del rendiment, ús i personalitzacions recopilada per a la telemesura. Aquesta informació s'envia a %1$S per ajudar a millorar %2$S.
 
+generalDataHeadingName = Nom
+
+
 slowSqlMain = Sentències SQL lentes en el fil principal
 
 slowSqlOther = Sentències SQL lentes en fils auxiliars
@@ -46,7 +49,6 @@ enableTelemetry = Habilita la telemesura
 
 keysHeader = Propietat
 
-valuesHeader = Valor
 
 addonTableID = ID del complement
 
