--- a/ca/browser/chrome/browser/devtools/webide.properties
+++ b/ca/browser/chrome/browser/devtools/webide.properties
@@ -5,14 +5,14 @@
 title_noApp=Firefox WebIDE
 title_app=Firefox WebIDE: %S
 
-runtimeButton_label=Selecciona un temps execució
+runtimeButton_label=Selecciona un entorn d'execució
 projectButton_label=Obre una aplicació
 
 mainProcess_label=Procés principal
 
-local_runtime=Temps d'execució local
-remote_runtime=Temps d'execució remot
-remote_runtime_promptTitle=Temps d'execució remot
+local_runtime=Entorn d'execució local
+remote_runtime=Entorn d'execució remot
+remote_runtime_promptTitle=Entorn d'execució remot
 remote_runtime_promptMessage=nom_ordinador:port
 
 importPackagedApp_title=Seleccioneu el directori
@@ -20,7 +20,6 @@ importHostedApp_title=Obre una aplicació hostatjada
 importHostedApp_header=Escriviu l'URL de manifest
 
 notification_showTroubleShooting_label=Resolució de problemes
-notification_showTroubleShooting_accesskey=r
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
@@ -41,6 +40,7 @@ error_cantConnectToApp=No es pot connectar a l'aplicació: %1$S
 
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=No es pot obtenir la llista de complements: %S
+
 
 addons_stable=estable
 addons_unstable=inestable
@@ -71,3 +71,5 @@ status_valid=VÀLID
 status_warning=AVISOS
 status_error=ERRORS
 status_unknown=DESCONEGUT
+
+# Preferences
