--- a/ca/security/manager/chrome/pippki/pippki.properties
+++ b/ca/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,11 @@ pageInfo_NoEncryption=La connexió no està xifrada
 pageInfo_Privacy_None1=El lloc web %S no permet l'ús de xifratge per a la pàgina que esteu visualitzant.
 pageInfo_Privacy_None2=La informació que s'envia per Internet sense xifratge pot ser visualitzada per tercers mentre és en camí.\u0020
 pageInfo_Privacy_None3=La pàgina que esteu visualitzant no està xifrada.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Connexió xifrada: xifratge d'alt nivell (%1$S, claus de %2$S bits)
-pageInfo_Privacy_Strong1=La pàgina que esteu visualitzant s'ha xifrat abans de transmetre-la per Internet.
-pageInfo_Privacy_Strong2=El xifratge fa molt difícil que persones no autoritzades puguin visualitzar la informació que viatja entre ordinadors. Per tant, és molt improbable que algú hagi llegit aquesta pàgina mentre circulava per la xarxa.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Connexió xifrada: xifratge de baix nivell (%1$S, claus de %2$S bits)
-pageInfo_Privacy_Weak1=El lloc web %S utilitza xifratge de baix nivell per a la pàgina que esteu visualitzant.
-pageInfo_Privacy_Weak2=El xifratge de baix nivell pot permetre que persones no autoritzades visualitzin aquesta informació.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_Privacy_Encrypted1=La pàgina que esteu visualitzant s'ha xifrat abans de transmetre-la per Internet.
 pageInfo_MixedContent=Connexió xifrada parcialment
-pageInfo_Privacy_Mixed1=Hi ha parts de la pàgina que esteu visualitzant que no es xifraren abans de transmetre's per Internet.
 
 #Cert Viewer
 certDetails=Visualitzador de certificats:
@@ -151,17 +144,12 @@ writeFileUnknownError=Error desconegut
 addExceptionBrandedWarning2=Esteu a punt de sobreescriure com el %S identifica aquest lloc.
 addExceptionInvalidHeader=Aquest lloc intenta identificar-se amb informació que no és vàlida.
 addExceptionDomainMismatchShort=Lloc web incorrecte
-addExceptionDomainMismatchLong=El certificat pertany a un lloc web diferent, fet que podria indicar una suplantació d'identitat.
 addExceptionExpiredShort=Informació obsoleta
-addExceptionExpiredLong=El certificat no és vàlid actualment. És impossible verificar llavors si s'hagués pogut informar que aquesta identitat s'hagi suplantat o perdut.
 addExceptionUnverifiedOrBadSignatureShort=Identitat desconeguda
-addExceptionUnverifiedOrBadSignatureLong=No es confia en el certificat, perquè no l'ha verificat una autoritat reconeguda mitjançant una signatura segura.
 addExceptionValidShort=Certificat vàlid
 addExceptionValidLong=El lloc web proporciona identificació vàlida i verificada. No cal afegir cap excepció.
 addExceptionCheckingShort=Comprovació de la informació
-addExceptionCheckingLong=S'està intentant identificar el lloc web…
 addExceptionNoCertShort=No hi ha cap informació disponible
-addExceptionNoCertLong=No es pot obtenir l'estat d'identificació per al lloc web donat.
 addExceptionConnectionFailed=Ha fallat la connexió
 
 #Certificate Exists in database
