[ta] update from Pootle (firefox)

--- a/ta/toolkit/chrome/global/aboutSupport.properties
+++ b/ta/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,6 @@ webglRenderer = WebGL கொடுப்பவர்
 minLibVersions = எதிர்பார்க்கப்படும் குறைந்தபட்ச பதிப்பு
 loadedLibVersions = பயன்பாட்டிலுள்ள பதிப்பு
 
+hasSeccompBPF = Seccomp-BPF (கணினி அழைத்தல் வடிகட்டி)
+canSandboxContent = உள்ளடக்க செயல்பாடு Sandboxing
+canSandboxMedia = ஊடக செருகி Sandboxing
