New strings for chat, dom, toolkit, and security

--- a/da/dom/chrome/dom/dom.properties
+++ b/da/dom/chrome/dom/dom.properties
@@ -209,3 +209,5 @@ KeyNameZoomWarning=Værdien "Zoom" for KeyboardEvent.key er forældet og vil bli
 KeyNameDeadKeysWarning=Værdier, der starter med "Dead" for KeyboardEvent.key er forældede og vil blive erstattet med "Dead". Læs mere på https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Importering af XUL-nodes ind i et indholdsdokument er forældet. Funktionen vil snart blive fjernet.
 XMLDocumentLoadPrincipalMismatch=Brug af document.load er ikke tilladt på dokumenter, som stammer fra andre vinduer. Kun vinduet, hvor et dokument blev skabt, må kalde .load på dokumentet. Brug i stedet XMLHttpRequest.
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=En IndexedDB-transaktion var endnu ikke afsluttet og blev afbrudt på grund af navigering væk fra siden.
