--- a/da/dom/chrome/layout/css.properties
+++ b/da/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=mætning
 PEColorLightnessEOF=lysniveau
 PEColorOpacityEOF=uigennemsigtighed i farveværdi
 PEExpectedNumber=Forventede et nummer, men fandt '%1$S'.
+PEPositionEOF=<position>
+PEExpectedPosition=Forventede <position>, men fandt '%1$S'.
+PEExpectedRadius=Forventede radius, men fandt '%1$S'.
 PEExpectedCloseParen=Forventede ')', men fandt '%1$S'.
 PEDeclEndEOF=';' eller '}' for at afslutte erklæring
 PEParseDeclarationNoColon=Forventede ':', men fandt '%1$S'.
