--- a/da/dom/chrome/security/security.properties
+++ b/da/dom/chrome/security/security.properties
@@ -10,6 +10,8 @@ CrossSiteRequestBlocked=Forespørgsel til fremmed websted blokeret. Politikken f
 InvalidSTSHeaders=Webstedet angav en ugyldig Strict-Transport-Security-header.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=Webstedet angav en ugyldig Public-Key-Pins-header.
+# LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=Webstedet bruger et SHA-1-certifikat; det anbefales, at du bruger certifikater med signatur-algoritmer, der bruger mere sikre hash-funktioner end SHA-1.
 InsecurePasswordsPresentOnPage=Login-felterne er placeret på en usikker side (http://). Dette udgør en sikkerhedsrisiko, da det er muligt at stjæle dine login-koder.
 InsecureFormActionPasswordsPresent=Login-felterne er placeret i en usikker formular (http://). Dette udgør en sikkerhedsrisiko, da det er muligt at stjæle dine login-koder.
 InsecurePasswordsPresentOnIframe=Login-felterne er placeret i en usikker iframe (http://).  Dette udgør en sikkerhedsrisiko, da det er muligt at stjæle dine login-koder.
