--- a/da/security/manager/chrome/pippki/pippki.properties
+++ b/da/security/manager/chrome/pippki/pippki.properties
@@ -73,19 +73,16 @@ pageInfo_ViewCertificate=Vis det sikkerhedscertifikat, der godkender dette webst
 pageInfo_NoEncryption=Forbindelsen er ikke krypteret
 pageInfo_Privacy_None1=Webstedet %S understøtter ikke kryptering af den side du kigger på.
 pageInfo_Privacy_None2=Oplysninger der sendes over internettet uden kryptering kan læses af andre, mens de bliver sendt.
-pageInfo_Privacy_None3=Siden, du kigger på, er ikke krypteret.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+pageInfo_Privacy_None3=Den aktuelle side er ikke krypteret.
+
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Forbindelse krypteret: Højniveau kryptering (%1$S, %2$S bit nøgle)
-pageInfo_Privacy_Strong1=Den side du kigger på blev krypteret før den blev sendt over internettet.
-pageInfo_Privacy_Strong2=Kryptering gør det meget vanskeligt for uautoriserede personer at se informationer der bevæger sig mellem computere. Det er derfor meget usandsynligt at nogen læste denne side da den blev sendt over netværket.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Forbindelse krypteret: Lavniveau kryptering (%1$S, %2$S bit nøgle)
-pageInfo_Privacy_Weak1=Webstedet %S bruger lavniveau kryptering for den side, du kigger på.
-pageInfo_Privacy_Weak2=Lavniveau kryptering kan muligvis tillade nogle uautoriserede personer at se denne information.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Forbindelsen er krypteret (%1$S, %2$S-bit-nøgle, %3$S)
+pageInfo_Privacy_Encrypted1=Den aktuelle side blev krypteret, før den blev sendt over internettet.
+pageInfo_Privacy_Encrypted2=Kryptering gør det meget vanskeligt for uautoriserede personer at aflæse informationer, der sendes mellem computere. Det er derfor meget usandsynligt, at nogen kunne se denne side, da den blev sendt over nettet.
 pageInfo_MixedContent=Forbindelsen er delvist krypteret
-pageInfo_Privacy_Mixed1=Dele af siden, du ser, blev ikke krypteret før den blev sendt over internettet.
+pageInfo_Privacy_Broken1=Dele af den aktuelle side blev ikke krypteret, før den blev sendt over nettet, eller der blev benyttet svag kryptering.
 
 #Cert Viewer
 certDetails=Certifikatfremviser:
@@ -153,17 +150,17 @@ writeFileUnknownError=Ukendt fejl
 addExceptionBrandedWarning2=Du er ved at tilsidesætte hvordan %S identificerer dette websted.
 addExceptionInvalidHeader=Dette websted forsøger at identificere sig selv med ugyldig information.
 addExceptionDomainMismatchShort=Forkert websted
-addExceptionDomainMismatchLong=Certifikatet tilhører et andet websted, hvilket kan indikere identitetstyveri.
+addExceptionDomainMismatchLong2=Certifikatet tilhører et andet websted, hvilket kan indikere forsøg på identitetstyveri.
 addExceptionExpiredShort=Forældet information
-addExceptionExpiredLong=Certifikatet er ikke gyldigt i øjeblikket. Det er ikke muligt at finde ud af, om identiteten er stjålet eller gået tabt.
+addExceptionExpiredLong2=Certifikatet er ikke gyldigt i øjeblikket. Det kan være blevet stjålet, hvorefter nogen så forsøger at bruge det til identitetstyveri.
 addExceptionUnverifiedOrBadSignatureShort=Ukendt identitet
-addExceptionUnverifiedOrBadSignatureLong=Der er ikke tillid til certifikatet, da det ikke er blevet verificeret af en kendt autoritet.
+addExceptionUnverifiedOrBadSignatureLong2=Der er ikke tillid til certifikatet, da det ikke er blevet verificeret af en kendt autoritet ved hjælp af en sikker signatur.
 addExceptionValidShort=Gyldigt certifikat
 addExceptionValidLong=Dette certifikat indeholder gyldig, verificeret information. Der er ingen grund til at tilføje en undtagelse.
 addExceptionCheckingShort=Kontrollerer information
-addExceptionCheckingLong=Forsøger at identificere siden…
+addExceptionCheckingLong2=Forsøger at identificere webstedet…
 addExceptionNoCertShort=Ingen tilgængelig information
-addExceptionNoCertLong=Kan ikke fastslå status for sidens certifikat.
+addExceptionNoCertLong2=Kan ikke fastslå status for webstedets certifikat.
 addExceptionConnectionFailed=Fejl i forbindelsen
 
 #Certificate Exists in database
