--- a/da/toolkit/chrome/global/aboutSupport.properties
+++ b/da/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer = WebGL Rendering
 
 minLibVersions = Forventet minimumsversion
 loadedLibVersions = Version i brug
+
+hasSeccompBPF = Seccomp-BPF (filtrering af systemkald)
+canSandboxContent = Sandboxning indholdsprocesser
+canSandboxMedia = Sandboxning af medie-plugin
