--- a/da/security/manager/chrome/pipnss/nsserrors.properties
+++ b/da/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Certifikatet er signeret med en sign
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Serveren benytter key pinning (HPKP) men det var ikke muligt at oprette en certifikatkæde, der matcher pinsættet. Overtrædelse af key pinning kan ikke tilsidesættes.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Serveren benytter et certifikat med udvidelsen med grundlæggende begrænsninger til at identificere den som en certifikatautoritet. Dette bør ikke være tilfældet for et korrekt udstedt certifikat.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Serveren benytter et certifikat med en nøglestørrelse, der er for lille til at oprette en sikker forbindelse.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=Serverens certifikat er udstedt af et X.509 version 1-certifikat, som ikke er et trust anchor. X.509 version 1-certifikater er forældede, og bør ikke bruges til at udstede andre certifikater.
