--- a/da/toolkit/chrome/global/aboutTelemetry.properties
+++ b/da/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Denne side viser Telemetrys indsamlede data om ydelse, hardware, brug og tilpasninger. De indsamlede data sendes til %1$S for at hjælpe med at forbedre %2$S.
 
+generalDataHeadingName = Navn
+
+generalDataHeadingValue = Værdi
+
 slowSqlMain = Langsomme SQL-statements i hovedtråden
 
 slowSqlOther = Langsomme SQL-statements i hjælpertråde
