[hr] update from Pootle (thunderbird)

--- a/hr/mobile/android/chrome/browser.properties
+++ b/hr/mobile/android/chrome/browser.properties
@@ -5,7 +5,12 @@
 
 # Alerts
 
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+
 alertDownloadsCancel=Odustani
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
 
 
 # LOCALIZATION NOTE (alertSearchEngineAddedToast, alertSearchEngineErrorToast, alertSearchEngineDuplicateToast)
@@ -53,6 +58,19 @@ xpinstallDisabledButton=Omogući
 # LOCALIZATION NOTE (contacts.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 
+# Device Storage API
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -97,6 +115,8 @@ password.save=Spremi
 # Text Selection
 
 # Casting
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
 
 # Context menu
 contextmenu.addToReadingList=Dodaj na popis za čitanje
@@ -104,8 +124,9 @@ contextmenu.addToReadingList=Dodaj na popis za čitanje
 # The label of the contextmenu item which allows you to search with your default search engine for
 # the text you have selected. %S is the name of the search engine. For example, "Google".
 contextmenu.setImageAs=Postavi sliku kao
-contextmenu.addSearchEngine=Dodaj pretraživač interneta
 contextmenu.playMedia=Pokreni
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
 
 contextmenu.paste=Zalijepi
 
@@ -122,11 +143,6 @@ inputWidgetHelper.clear=Obriši
 # LOCALIZATION NOTE (timer.end):
 # This string is used to display the result of the console.timeEnd() call.
 # %1$S=name of timer, %2$S=number of milliseconds
-
-# Webapps
-# Shown when there is a generic problem installing an app
-# Shown when there is something wrong with an apps manifest
-# Shown when a network error prevented installing an app
 
 # Click to play plugins
 # LOCALIZATION NOTE (clickToPlayPlugins.dontAskAgain): This label appears next to a
@@ -153,6 +169,8 @@ remoteIncomingPromptCancel=Odustani
 # if the name of the app is not available.
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
 
 # Helper apps
 helperapps.never=Nikada
@@ -173,3 +191,8 @@ openInApp.cancel = Odustani
 #Tabs in context menus
 
 # "Subscribe to page" prompts created in FeedHandler.js
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
