--- a/hr/toolkit/chrome/global/aboutTelemetry.properties
+++ b/hr/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,9 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Ova stranica prikazuje informacije o perfomansama, hardveru, korištenju i podešenjima prikupljenim od Telemetrije. Ovi podaci se šalju u %1$S kako bi pomogli u unapređenju %2$S.
 
+generalDataHeadingName = Naziv
+
+
 slowSqlMain = Spori SQL upiti na glavnoj niti
 
 slowSqlOther = Spori SQL upiti na pomoćnim nitima
@@ -46,7 +49,6 @@ enableTelemetry = Omogući Telemetriju
 
 keysHeader = Svojstvo
 
-valuesHeader = Vrijednosti
 
 addonTableID = ID dodatka
 
