--- a/hr/browser/chrome/browser/devtools/webide.properties
+++ b/hr/browser/chrome/browser/devtools/webide.properties
@@ -20,7 +20,6 @@ importHostedApp_title=Otvori hostanu aplikaciju
 importHostedApp_header=Upiši URL manifesta
 
 notification_showTroubleShooting_label=Otklanjanje grešaka
-notification_showTroubleShooting_accesskey=t
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
@@ -41,6 +40,7 @@ error_cantConnectToApp=Povezivanje na aplikaciju nije moguće: %1$S
 
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Preuzimanje popisa dodataka nije moguće: %S
+
 
 addons_stable=stabilno
 addons_unstable=nestabilno
@@ -71,3 +71,5 @@ status_valid=VALID
 status_warning=WARNINGS
 status_error=ERRORS
 status_unknown=UNKNOWN
+
+# Preferences
