--- a/hr/browser/chrome/browser/shellservice.properties
+++ b/hr/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = Ne pitaj me ponovo
 setDefaultBrowserNever.accesskey   = N
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Zadani preglednik
+setDefaultBrowserMessage=%S trenutno nije vaš zadan web preglednik. Želite li ga postaviti kao zadanog?
+setDefaultBrowserDontAsk=Uvijek provjeri pri pokretanju %S.
 
 desktopBackgroundLeafNameWin=Pozadina radne površine.bmp
 DesktopBackgroundDownloading=Spremanje slike...
