--- a/hr/dom/chrome/security/security.properties
+++ b/hr/dom/chrome/security/security.properties
@@ -10,6 +10,7 @@ CrossSiteRequestBlocked=Cross-Origin zahtjev blokiran: politika jednakog izvora 
 InvalidSTSHeaders=Stranica je definirala neispravno Strict-Transport-Security zaglavlje.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=Stranica je navela neispravna Public-Key-Pins zaglavlja.
+# LOCALIZATION NOTE: Do not translate "SHA-1"
 InsecurePasswordsPresentOnPage=Polja za unos lozinki na nesigurnoj (http://) stranici. Ovo predstavlja sigurnosni rizik za krađu pristupnih podataka.
 InsecureFormActionPasswordsPresent=Polja za unos lozinki s nesigurnom (http://) akcijom forme. Ovo predstavlja sigurnosni rizik za krađu pristupnih podataka.
 InsecurePasswordsPresentOnIframe=Polja za unos lozinki na nesigurnom (http://) iframeu. Ovo predstavlja sigurnosni rizik za krađu pristupnih podataka.
