[hr] update from Pootle (firefox)

--- a/hr/dom/chrome/dom/dom.properties
+++ b/hr/dom/chrome/dom/dom.properties
@@ -210,3 +210,4 @@ KeyNameDeadKeysWarning=KeyboardEvent.key vrijednosti koje započinju sa "Dead" s
 ImportXULIntoContentWarning=Uvoz XUL čvorova u dokument sadržaja je zastarjelo. Ova funkcionalnost bi ubrzo mogla biti uklonjena.
 XMLDocumentLoadPrincipalMismatch=Upotreba metode document.load je zabranjena na dokumentira koji dolaze iz drugih prozora. Samo prozor u kojem je dokument nastao ima pravo pozvati .load metodu za taj dokument. Radije koristite XMLHttpRequest metodu.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=IndexedDB transakcija koja još nije završila je prekinuta zbog odlaska sa stranice.
