--- a/hr/dom/chrome/layout/css.properties
+++ b/hr/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=zasićenost
 PEColorLightnessEOF=svjetlina
 PEColorOpacityEOF=zamućenost u vrijednosti boje
 PEExpectedNumber=Očekivan broj, ali pronađen '%1$S'.
+PEPositionEOF=<position>
+PEExpectedPosition=Očekivano <position>, ali pronađeno '%1$S'.
+PEExpectedRadius=Očekivan radius, ali pronađen '%1$S'.
 PEExpectedCloseParen=Očekivana ')', ali pronađen '%1$S'.
 PEDeclEndEOF=';' ili '}' za kraj deklaracije
 PEParseDeclarationNoColon=Očekivana ':', ali pronađen '%1$S'.
