--- a/hr/toolkit/chrome/global/aboutSupport.properties
+++ b/hr/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,6 @@ webglRenderer = WebGL renderer
 minLibVersions = Očekivana najmanja inačica
 loadedLibVersions = Korištena inačica
 
+hasSeccompBPF = Seccomp-BPF (filtriranje sistemskih poziva)
+canSandboxContent = Sandboxing sadržajnih procesa
+canSandboxMedia = Sandboxing medija priključaka
