Bug 1068949 - Send SHA-1 deprecation warnings in to the web console

--- a/pl/dom/chrome/security/security.properties
+++ b/pl/dom/chrome/security/security.properties
@@ -5,6 +5,7 @@ CrossSiteRequestBlocked=Zablokowano żądanie do zasobu innego pochodzenia: zasa
 
 InvalidSTSHeaders=Strona wysyła niewłaściwy nagłówek Strict-Transport-Security.
 InvalidPKPHeaders=Strona wysyła niewłaściwy nagłówek Public-Key-Pins.
+SHA1Sig=Strona używa certyfikatu SHA-1 - zalecane jest używanie certyfikatów z algorytmami sygnatur wykorzystującymi funkcje skracania silniejsze niż SHA-1.
 InsecurePasswordsPresentOnPage=Pola haseł obecne na niezabezpieczonej (http://) stronie. Stanowi to zagrożenie bezpieczeństwa pozwalające na kradzież danych logowania użytkownika.
 InsecureFormActionPasswordsPresent=Pola haseł obecne w formularzu z niezabezpieczonym (http://) adresem docelowym. Stanowi to zagrożenie bezpieczeństwa pozwalające na kradzież danych logowania użytkownika.
 InsecurePasswordsPresentOnIframe=Pola haseł obecne w niezabezpieczonej (http://) ramce. Stanowi to zagrożenie bezpieczeństwa pozwalające na kradzież danych logowania użytkownika.
