Bug 982484 - Device preferences support

--- a/pl/browser/chrome/browser/devtools/webide.properties
+++ b/pl/browser/chrome/browser/devtools/webide.properties
@@ -57,3 +57,5 @@ status_valid=prawidłowy
 status_warning=ostrzeżenia
 status_error=błędy
 status_unknown=nieznany
+
+devicepreferences_reset_default=Przywróć domyślne
