[hr] update from Pootle (firefox)

--- a/hr/toolkit/chrome/global/aboutTelemetry.properties
+++ b/hr/toolkit/chrome/global/aboutTelemetry.properties
@@ -9,6 +9,7 @@ pageSubtitle = Ova stranica prikazuje informacije o perfomansama, hardveru, kori
 
 generalDataHeadingName = Naziv
 
+generalDataHeadingValue = Vrijednost
 
 slowSqlMain = Spori SQL upiti na glavnoj niti
 
@@ -49,6 +50,7 @@ enableTelemetry = Omogući Telemetriju
 
 keysHeader = Svojstvo
 
+valuesHeader = Vrijednost
 
 addonTableID = ID dodatka
 
