--- a/hr/security/manager/chrome/pippki/pippki.properties
+++ b/hr/security/manager/chrome/pippki/pippki.properties
@@ -76,7 +76,9 @@ pageInfo_Privacy_None3=Stranica koju pregledavate nije šifrirana.
 # LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Veza kriptirana (%1$S, %2$S bitni ključevi, %3$S)
 pageInfo_Privacy_Encrypted1=Stranica koju pregledavate je šifrirana prije slanja putem Interneta.
+pageInfo_Privacy_Encrypted2=Kriptiranje neovlaštenim osobama otežava pregledavanje informacija koje putuju između računala. Stoga je mala vjerojatnost da je netko pročitao ovu stranicu dok je putovala mrežom.
 pageInfo_MixedContent=Djelomično šifrirana veza
 
 #Cert Viewer
