Bug 1060093 - Implement toolbox to debug chrome of the content process

--- a/pl/browser/chrome/browser/devtools/toolbox.properties
+++ b/pl/browser/chrome/browser/devtools/toolbox.properties
@@ -53,3 +53,5 @@ pickButton.tooltip=Wskaż element na stronie
 
 options.darkTheme.label=ciemny
 options.lightTheme.label=jasny
+
+toolbox.noContentProcess.message=Brak uruchomionego procesu treści.
