Bug 1093595 - Change strings to add a description about weak encryption

--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -252,7 +252,7 @@ identity.identified.verified_by_you=Użytkownik dodał wyjątek od reguł bezpie
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=Połączenie z tą stroną internetową jest bezpieczne.
-identity.mixed_display_loaded=Połączenie z tą witryną nie jest w pełni bezpieczne, ponieważ zawiera ona nieszyfrowane elementy (np. obrazki).
+identity.broken_loaded=Połączenie z tą witryną nie jest w pełni bezpieczne, ponieważ zawiera ona nieszyfrowane elementy (np. obrazki) lub szyfrowanie nie jest wystarczające.
 identity.mixed_active_loaded2=Ta witryna zawiera nieszyfrowaną interaktywną zawartość (np. skrypty). Inne osoby mogą zobaczyć twoje informacje lub zmodyfikować zachowanie strony.
 identity.unencrypted=Połączenie z tą witryną nie jest szyfrowane.
 
