--- a/pl/security/manager/chrome/pippki/pippki.properties
+++ b/pl/security/manager/chrome/pippki/pippki.properties
@@ -72,17 +72,11 @@ pageInfo_NoEncryption=Połączenie nie jest szyfrowane
 pageInfo_Privacy_None1=Pobierana strona WWW z witryny %S nie obsługuje szyfrowania danych.
 pageInfo_Privacy_None2=Informacje przesyłane przez sieć Internet bez uprzedniego szyfrowania mogą zostać odczytane przez inne osoby.
 pageInfo_Privacy_None3=Oglądana strona nie jest zaszyfrowana.
-  pageInfo_StrongEncryptionWithBitsAndProtocol=Połączenie szyfrowane: wysoki poziom szyfrowania (%1$S, %2$S-bitowe klucze, %3$S)
-  pageInfo_Privacy_Strong1=Oglądana strona została zaszyfrowana przed przesłaniem przez sieć Internet.
-  pageInfo_Privacy_Strong2=Szyfrowanie danych poważnie utrudnia niepowołanym osobom dostęp do informacji przesyłanych pomiędzy komputerami. Dzięki temu prawdopodobieństwo odczytania przez osobę nieuprawnioną danych przesyłanych w sieci jest bardzo niskie.
-  pageInfo_WeakEncryptionWithBitsAndProtocol=Połączenie szyfrowane: niski poziom szyfrowania (%1$S, %2$S-bitowe klucze, %3$S)
-  pageInfo_Privacy_Weak1=Pobierana strona WWW z witryny %S używa niskiego poziomu szyfrowania przy przesyłaniu danych.
-  pageInfo_Privacy_Weak2=Niski poziom szyfrowania danych może pozwolić na dostęp do przesyłanych informacji niepowołanym osobom.
 pageInfo_EncryptionWithBitsAndProtocol=Połączenie szyfrowane (%1$S, %2$S-bitowe klucze,, %3$S)
 pageInfo_Privacy_Encrypted1=Wyświetlana strona została zaszyfrowana przed przesłaniem poprzez Internet.
 pageInfo_Privacy_Encrypted2=Szyfrowanie utrudnia nieupoważnionym osobom dostęp do informacji przesyłanych między komputerami. Jest dlatego mało prawdopodobne, że ktokolwiek miał dostęp do treści tej strony, gdy podróżowała przez Internet.
 pageInfo_MixedContent=Połączenie częściowo szyfrowane
-pageInfo_Privacy_Mixed1=Niektóre części obecnie wyświetlanej strony nie zostały zaszyfrowane przed przesłaniem przez Internet.
+pageInfo_Privacy_Broken1=Niektóre części obecnie wyświetlanej strony nie zostały zaszyfrowane (lub szzyfrowanie nie jest wystarczające) przed przesłaniem przez Internet.
 
 #Cert Viewer
 certDetails=Podgląd certyfikatu:
