Bug 1057035 - Fix terminology used in the certificate exception dialog

--- a/pl/security/manager/chrome/pippki/pippki.properties
+++ b/pl/security/manager/chrome/pippki/pippki.properties
@@ -143,17 +143,17 @@ writeFileUnknownError=Nieznany błąd
 addExceptionBrandedWarning2=Próba zmiany sposobu, w jaki %S identyfikuje tę witrynę.
 addExceptionInvalidHeader=Ta witryna próbuje zidentyfikować się przy użyciu nieprawidłowych informacji.
 addExceptionDomainMismatchShort=Niewłaściwa witryna
-addExceptionDomainMismatchLong=Certyfikat należy do innej witryny, co może wskazywać na kradzież tożsamości.
+addExceptionDomainMismatchLong2=Certyfikat należy do innej witryny, co może wskazywać na podszywanie się pod stronę.
 addExceptionExpiredShort=Informacje nieaktualne
-addExceptionExpiredLong=Certyfikat nie jest obecnie aktualny. Nie jest możliwe sprawdzenie, czy ta tożsamość nie została zgłoszona jako ukradziona lub zagubiona.
+addExceptionExpiredLong2=Certyfikat nie jest obecnie aktualny. Mógł zostać zagubiony lub skradziony i może być wykorzystywany do podszywania się pod stronę.
 addExceptionUnverifiedOrBadSignatureShort=Tożsamość nieznana
-addExceptionUnverifiedOrBadSignatureLong=Certyfikat nie jest zaufany, ponieważ nie został zweryfikowany przez zaufany organ przy użyciu bezpiecznego podpisu.
+addExceptionUnverifiedOrBadSignatureLong2=Certyfikat nie jest zaufany, ponieważ nie został zweryfikowany jako wystawiony przez zaufany organ przy użyciu bezpiecznego podpisu.
 addExceptionValidShort=Certyfikat prawidłowy
 addExceptionValidLong=Ta witryna dostarcza prawidłowych i zweryfikowanych informacji identyfikujących. Nie ma potrzeby dodawania wyjątku.
 addExceptionCheckingShort=Sprawdzanie informacji
-addExceptionCheckingLong=Próba identyfikacji witryny…
+addExceptionCheckingLong2=Próba identyfikacji witryny…
 addExceptionNoCertShort=Brak dostępnych informacji
-addExceptionNoCertLong=Nie udało się pobrać statusu identyfikacji żądanej witryny.
+addExceptionNoCertLong2=Nie udało się pobrać statusu identyfikacji tej witryny.
 addExceptionConnectionFailed=Błąd połączenia
 
 #Certificate Exists in database
