[sy] dom: cycle 36

--- a/sr/dom/chrome/layout/css.properties
+++ b/sr/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=обојеност
 PEColorLightnessEOF=осветљење
 PEColorOpacityEOF=провидност боје
 PEExpectedNumber=Уместо броја пронађен је '%1$S'.
+PEPositionEOF=<position>
+PEExpectedPosition=Очекивана <position> али је пронађено '%1$S'.
+PEExpectedRadius=Очекиван радијус али је пронађено '%1$S'.
 PEExpectedCloseParen=Уместо ')' пронађено је '%1$S'.
 PEDeclEndEOF=';' или '}' на крају декларације
 PEParseDeclarationNoColon=Уместо ':' пронађено је '%1$S'.
