--- a/sr/dom/chrome/security/security.properties
+++ b/sr/dom/chrome/security/security.properties
@@ -10,6 +10,8 @@ CrossSiteRequestBlocked=Cross-Origin захтев блокиран: Полиса
 InvalidSTSHeaders=Сајт је навео непознато Strict-Transport-Security заглавље.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=Сајт је навео непознато Public-Key-Pins заглавље.
+# LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=Овај сајт користи SHA-1 сертификат; препоручљиво је да користите сертификате са потписом алгоритама који користе хеш функцију јачу од SHA-1.
 InsecurePasswordsPresentOnPage=Поља за лозинке су представљена на несигурној (http://) страници. Ово је сигурносни ризик који омогућује да Ваши акредитиви буду украдени.
 InsecureFormActionPasswordsPresent=Поља за лозинке су представљена на несигурној (http://) форми. Ово је сигурносни ризик који омогућује да Ваши акредитиви буду украдени.
 InsecurePasswordsPresentOnIframe=Поља за лозинке су представљена на несигурном (http://) iframe. Ово је сигурносни ризик који омогућује да Ваши акредитиви буду украдени.
