--- a/sr/dom/chrome/dom/dom.properties
+++ b/sr/dom/chrome/dom/dom.properties
@@ -209,3 +209,5 @@ KeyNameZoomWarning=KeyboardEvent.key вредност "Zoom" је застаре
 KeyNameDeadKeysWarning=KeyboardEvent.key вредности које поћињу са "Dead" су застареле и биће спојене у само "Dead". За помоћ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Увожење XUL nodes у садржај документа је застарело. Ова функционалност ће бити уклоњена ускоро.
 XMLDocumentLoadPrincipalMismatch=Коришћење document.load је забрањено на документима који долазе из других прозора. Само у прозору у коме је документ направљен је дозвољено да се позове .load на тај докуменат. Пожељно, користите XMLHttpRequest уместо тога.
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=IndexedDB трансакција која још увек није завршена је прекинута због навигације странице.
