Bug 1069421 - Add a memory graph to the timeline

--- a/pl/browser/chrome/browser/devtools/timeline.properties
+++ b/pl/browser/chrome/browser/devtools/timeline.properties
@@ -13,4 +13,7 @@ timeline.label.reflow=Reflow
 timeline.label.paint=Malowanie
 timeline.label.domevent=Zdarzenie DOM
 timeline.label.consoleTime=Konsola
+
+graphs.memory=MB
+
 timeline.markerDetailFormat=%1$S (%2$S)
