Bug 1050774 - Record script execution in timeline view

--- a/pl/browser/chrome/browser/devtools/timeline.properties
+++ b/pl/browser/chrome/browser/devtools/timeline.properties
@@ -11,6 +11,7 @@ timeline.records=Zdarzenia
 timeline.label.styles=Styl
 timeline.label.reflow=Reflow
 timeline.label.paint=Malowanie
+timeline.label.javascript=JavaScript
 timeline.label.domevent=Zdarzenie DOM
 timeline.label.consoleTime=Konsola
 
